# android_media_learn

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/levi/ackerman/medialearn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yura.pcm
app/src/main/java/levi/ackerman/medialearn/: AudioPlayer.java  BaseFragment.kt  MainActivity.java  MainActivity.kt  MediaFile.java  PcmData.java  VideoPlayer.java
app/src/main/java/levi/ackerman/medialearn/chapter01/: MediaPlayerFragment.kt
app/src/main/java/levi/ackerman/medialearn/chapter02/: AudioPlayer.kt  BridgeUtil02.java  SoundPlayerFragment.kt
app/src/main/java/levi/ackerman/medialearn/chapter03/: CodecPlayerFragment.kt  IMediaMutext.kt  MediaInfo.kt  MediaMutexHard.kt
app/src/main/java/levi/ackerman/medialearn/chapter04/: FFMpegFragment.kt
app/src/main/java/levi/ackerman/medialearn/util/: LogUtil.kt  TaskPool.kt  functions.kt
app/src/main/jni/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  main.h  media_file.cpp  media_file.h  native.c  native.cpp
app/src/main/jni/bridge/: bridge_audio_player.cpp  bridge_video_player.cpp
app/src/main/jni/include/: audio_decoder.h  audio_params.h  log.h  pcm.h
app/src/main/jni/opensl/: SLAudioPlayer.cpp  SLAudioPlayer.h  play_pcm_with_opensl.c
app/src/main/res/layout/: activity_main.xml  fragment_codec_player.xml  fragment_f_f_mpeg.xml  fragment_sound_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/levi/ackerman/medialearn/: ExampleUnitTest.java
doc/: introduction.md
gradle/wrapper/: gradle-wrapper.properties
